feat(device) detect new brand Takara model: MID211H feat(device) detect new brand Tronsmart model: Orion R68G feat(device) detect brand Ainol model: Novo 10 Spark feat(device) detect brand Archos model: 50 Titanium 4G (A50TI) feat(device) detect brand Minix model: NEO U1 (NEO-U1) feat(device) detect brand Medion models: B5530, Life S5004 (S5004) feat(device) detect brand Prestigio model: Muze C3 feat(device) detect brand Sharp model: Aquos 2 (NP601SH) feat(device) detect brand Highscreen model: Pure Power

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -1591,11 +1591,13 @@ Amoi:
 
 # Ainol
 Ainol:
-  regex: 'Numy|novo[0-9]|Novo 10 Hero|AX10PRO|NUMY3GAX9'
+  regex: 'Numy|novo[0-9]|Novo 10 Hero|AX10PRO|NUMY3GAX9|NOVO10 Spark'
   device: 'tablet'
   models:
     - regex: 'Numy 3G AX1'
       model: 'Novo 7 Numy AX1 3G'
+    - regex: 'NOVO10 Spark'
+      model: 'Novo 10 Spark'
     - regex: 'AX10PRO'
       model: 'Numy AX10 Pro'
     - regex: 'Numy_3G_AX3'
@@ -1616,11 +1618,13 @@ Ainol:
 
 # Archos
 Archos:
-  regex: '(?:YL-)?Archos'
+  regex: '(?:YL-)?Archos|A50TI[);/ ]'
   device: 'smartphone'
   models:
     - regex: 'Archos (Oxygen 63)[);/ ]'
       model: '$1'
+    - regex: 'A50TI[);/ ]'
+      model: '50 Titanium 4G'
     - regex: 'Archos ?5[);/ ]'
       device: 'tablet'
       model: '5'
@@ -5412,7 +5416,7 @@ Hoozo:
 
 # Minix (minix.us)
 Minix:
-  regex: 'NEO-(?:X8-H|X[57]-mini|X8H-PLUS|X88-?I|X7-216A|X5-116A|X[68])[);/ ]'
+  regex: 'NEO-(?:X8-H|X[57]-mini|X8H-PLUS|X88-?I|X7-216A|X5-116A|X[68]|U1)[);/ ]'
   device: 'tv'
   models:
     - regex: 'NEO-X8-H[);/ ]'
@@ -5429,6 +5433,8 @@ Minix:
       model: 'NEO X5'
     - regex: 'NEO-X([68])[);/ ]'
       model: 'NEO X$1'
+    - regex: 'NEO-U1[);/ ]'
+      model: 'NEO U1'
 
 # Huawei
 Huawei:
@@ -8241,6 +8247,10 @@ Medion:
       model: 'Lifetab $1'
     - regex: 'X5001'
       model: 'Life X5001'
+    - regex: '(B5530)'
+      model: '$1'
+    - regex: 'S5004'
+      model: 'Life S5004'
     - regex: '(E10[45]1X)[);/ ]'
       device: 'tablet'
       model: '$1'
@@ -11570,7 +11580,7 @@ Positivo:
 
 # Prestigio
 Prestigio:
-  regex: '(?:PMP|PAP|PMT|PSP|PGPS)[0-9]+[a-z0-9_]+[);/ ]'
+  regex: '(?:PMP|PAP|PMT|PSP|PGPS)[0-9]+[a-z0-9_]+[);/ ]|Muze C3'
   device: 'tablet'
   models:
     - regex: 'PMT3277_3G'
@@ -11593,6 +11603,9 @@ Prestigio:
       model: '$1'
     - regex: '((?:PAP|PSP)[0-9]+[a-z0-9_]+(?: DUO)?)[);/ ]'
       model: '$1'
+      device: 'smartphone'
+    - regex: 'Muze C3[);/ ]'
+      model: 'Muze C3'
       device: 'smartphone'
 
 # Sanyo
@@ -11767,7 +11780,7 @@ Spice:
 
 # Sharp (jp.sharp)
 Sharp:
-  regex: 'SHARP|SBM|SH-?[0-9]+[a-z]?[);/ ]|AQUOS|(?:SH-M0[589]|S[35]-SH|SH-Z(10|01)|SH-[CL]02|[45]02SH|[36]05SH|70[126]SH|80[18]SH|901SH|50[67]SH|SHL22|SHV4[0-7]|SHV3[5689]|FS80(?:1[08]|32|28|0[29])|TG-L900S|509SH)[);/ ]'
+  regex: 'SHARP|SBM|SH-?[0-9]+[a-z]?[);/ ]|AQUOS|(?:SH-M0[589]|S[35]-SH|SH-Z(10|01)|SH-[CL]02|[45]02SH|[36]05SH|70[126]SH|80[18]SH|901SH|50[67]SH|SHL22|SHV4[0-7]|SHV3[5689]|FS80(?:1[08]|32|28|0[29])|TG-L900S|509SH|NP601SH)[);/ ]'
   device: 'smartphone'
   models:
     # explicit smartphone models
@@ -11813,6 +11826,8 @@ Sharp:
       model: 'Aquos Crystal X'
     - regex: '509SH[);/ ]'
       model: 'Aquos 3'
+    - regex: 'NP601SH[);/ ]'
+      model: 'Aquos 2'
     - regex: 'SHV40[);/ ]'
       model: 'Aquos S'
     - regex: '702SH[);/ ]'
@@ -14808,7 +14823,7 @@ BDF:
 
 # Highscreen
 Highscreen:
-  regex: 'HIGHSCREEN|(Easy-Power-Pro|Power Ice(?: Max)?|Easy_S_Pro|Razar_Pro|Power Rage(?: Evo)?|Zera[ _][UFS]|Power[ _]?Five[ _]?(?:Pro|Evo)|PowerFour|BOOST II(?:se)?|FestXL)[;)/ ]'
+  regex: 'HIGHSCREEN|(Easy-Power-Pro|Pure[_ ]Power|Power Ice(?: Max)?|Easy_S_Pro|Razar_Pro|Power Rage(?: Evo)?|Zera[ _][UFS]|Power[ _]?Five[ _]?(?:Pro|Evo)|PowerFour|BOOST II(?:se)?|FestXL)[;)/ ]'
   device: 'smartphone'
   models:
     - regex: '(Power Ice(?:[ ](?:Max|Evo))?|Power Rage(?: Evo)?|Zera[ _][UFS])[;)/ ]'
@@ -14821,6 +14836,8 @@ Highscreen:
       model: 'Fest XL'
     - regex: 'PowerFour[;)/ ]'
       model: 'Power Four'
+    - regex: 'Pure[_ ]Power[;)/ ]'
+      model: 'Pure Power'
     - regex: 'Razar_Pro[;)/ ]'
       model: 'Razar Pro'
     - regex: 'Easy_S_Pro[;)/ ]'
@@ -15765,3 +15782,15 @@ Crony:
   regex: 'CRONY-7021[);/ ]'
   device: 'tablet'
   model: '7021'
+
+# Takara
+Takara:
+  regex: '(MID211H)[);/ ]'
+  device: 'tablet'
+  model: '$1'
+
+# Tronsmart
+Tronsmart:
+  regex: '(Orion R68G)[);/ ]'
+  device: 'tv'
+  model: '$1'
