--- a/Tests/fixtures/smartphone-16.yml
+++ b/Tests/fixtures/smartphone-16.yml
@@ -3599,3 +3599,203 @@
     model: EAGLE 1065G 10.1"
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 5.1.1; MEDION S5004) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/79.0.3945.93 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: 5.1.1
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    short_name: CM
+    version: 79.0.3945.93
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: MD
+    model: Life S5004
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 5.1.1; MEDION B5530) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/78.0.3904.108 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: 5.1.1
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    short_name: CM
+    version: 78.0.3904.108
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: MD
+    model: B5530
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 5.1.1; MID211H) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/77.0.3865.92 Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: 5.1.1
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    short_name: CH
+    version: 77.0.3865.92
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: TK
+    model: MID211H
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 5.1.1; Muze C3) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/78.0.3904.108 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: 5.1.1
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    short_name: CM
+    version: 78.0.3904.108
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: PR
+    model: Muze C3
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 5.1.1; NEO-U1) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/77.0.3865.92 Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: 5.1.1
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    short_name: CH
+    version: 77.0.3865.92
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: 1X
+    model: NEO U1
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 5.1.1; NOVO10 Spark) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/76.0.3809.111 Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: 5.1.1
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    short_name: CH
+    version: 76.0.3809.111
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: AZ
+    model: Novo 10 Spark
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 5.1.1; NP601SH Build/S0018) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/39.0.0.0 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: 5.1.1
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Webview
+    short_name: CV
+    version: 39.0.0.0
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: SH
+    model: Aquos 2
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 5.1.1; Orion R68G) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/77.0.3865.92 Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: 5.1.1
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    short_name: CH
+    version: 77.0.3865.92
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: 4T
+    model: Orion R68G
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 5.1.1; Pure_Power) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/78.0.3904.108 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: 5.1.1
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    short_name: CM
+    version: 78.0.3904.108
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: H2
+    model: Pure Power
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 5.1; A50TI) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/79.0.3945.93 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: "5.1"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    short_name: CM
+    version: 79.0.3945.93
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: AR
+    model: 50 Titanium 4G
+  os_family: Android
+  browser_family: Chrome
