feat(device) detect new brand Amigoo models: R300, R9 Max, M1 Max feat(device) detect brand Aligator model: S5080

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -15175,7 +15175,7 @@ Aligator:
   regex: 'ALIGATOR[_);/ ]'
   device: 'smartphone'
   models:
-    - regex: 'ALIGATOR[ _](S50(?:6[56]|[67]0))[);/ ]'
+    - regex: 'ALIGATOR[ _](S50(?:6[56]|[678]0))[);/ ]'
       model: '$1'
 
 # Maxcom
@@ -15793,4 +15793,10 @@ Takara:
 Tronsmart:
   regex: '(Orion R68G)[);/ ]'
   device: 'tv'
+  model: '$1'
+
+# Amigoo
+Amigoo:
+  regex: 'AMIGOO (R300|R9 Max|M1 Max)[);/ ]'
+  device: 'smartphone'
   model: '$1'
