feat(device) detect brand Asus model: Z906 10.1" (Z906) feat(device) detect brand Yezz models: Andy 5EI, Andy 5EL

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -1834,6 +1834,9 @@ Asus:
     - regex: 'ME171[);/ ]'
       model: 'Eee Pad MeMO 171'
       device: 'tablet'
+    - regex: 'ASUS Z906[);/ ]'
+      model: 'Z906 10.1"'
+      device: 'tablet'
     - regex: 'ME172V'
       model: 'MeMO Pad'
       device: 'tablet'
@@ -13551,6 +13554,10 @@ Yezz:
       model: 'Andy A5EI'
     - regex: 'ANDY_C5QL'
       model: 'Andy C5QL'
+    - regex: 'ANDY_5EL'
+      model: 'Andy 5EL'
+    - regex: 'ANDY[_ ]5EI'
+      model: 'Andy 5EI'
 
 # Yu
 Yu:
