feat(device) detect new brand Eltex model: Neo 909 feat(device) detect new brand Neomi models: NV-501-Wac, NV-501 feat(device) detect brand Minix model: NEO Z64

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -5425,7 +5425,7 @@ Hoozo:
 
 # Minix (minix.us)
 Minix:
-  regex: 'NEO-(?:X8-H|X[57]-mini|X8H-PLUS|X88-?I|X7-216A|X5-116A|X[68]|U1)[);/ ]'
+  regex: 'NEO-(?:X8-H|X[57]-mini|X8H-PLUS|X88-?I|X7-216A|X5-116A|X[68]|U1|Z64)[);/ ]'
   device: 'tv'
   models:
     - regex: 'NEO-X8-H[);/ ]'
@@ -5444,6 +5444,8 @@ Minix:
       model: 'NEO X$1'
     - regex: 'NEO-U1[);/ ]'
       model: 'NEO U1'
+    - regex: 'NEO-Z64[);/ ]'
+      model: 'NEO Z64'
 
 # Huawei
 Huawei:
@@ -15831,3 +15833,19 @@ Lumigon:
   regex: 'Lumigon[ _](T3)[);/ ]'
   device: 'smartphone'
   model: '$1'
+
+# Neomi
+Neomi:
+  regex: 'NEO (909)[);/ ]'
+  device: 'smartphone'
+  model: 'Neo $1'
+
+# Eltex (eltex-co.ru)
+Eltex:
+  regex: '(?:NV501WAC|NV501)[);/ ]'
+  device: 'tv'
+  models:
+    - regex: 'NV501WAC[);/ ]'
+      model: 'NV-501-Wac'
+    - regex: 'NV501[);/ ]'
+      model: 'NV-501'
