--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -782,17 +782,32 @@ Bravis:
       model: 'A509 Jeans'
     - regex: 'N1_550_Cruiser'
       model: 'N1-550 Cruiser'
+    - regex: 'BRAVIS OMEGA'
+      model: 'Omega'
+    - regex: 'BRAVIS BIZ'
+      model: 'Biz'
+    - regex: 'BRAVIS POWER'
+      model: 'Power'
+
     - regex: 'BRAVIS[ _]SLIM[ _]3G'
       model: 'Slim 3G'
       device: 'tablet'
+    - regex: 'NP 104 3G'
+      model: 'NP104 3G'
+      device: 'tablet'
+    - regex: 'BRAVIS NP 103'
+      model: 'NP103'
+      device: 'tablet'
+    - regex: 'BRAVIS NP 844'
+      model: 'NP844'
+      device: 'tablet'
+
     - regex: 'Bravis[_ ]([^;\)]+) Build'
       model: '$1'
     - regex: '(NB(?:106M|10[1-8]|751|7[145]|8[57]1|76)|NP101|NB961)'
       model: '$1'
       device: 'tablet'
-    - regex: 'NP 104 3G'
-      model: 'NP104 3G'
-      device: 'tablet'
+
 
 # Acer
 Acer:
@@ -3555,7 +3570,7 @@ CUBOT:
       model: 'Power'
     - regex: 'CUBOT_X18_Plus'
       model: 'X18 Plus'
-    - regex: 'CUBOT[ _](A5|C6W|H3|J3|P7|P20|R9|R11|X18)'
+    - regex: 'CUBOT[ _](A5|C6W|H3|J3|P7|P20|[RX]9|R11|X18)[);/ ]'
       model: '$1'
     - regex: 'CUBOT ([^;/]+) Build'
       model: '$1'
@@ -3768,7 +3783,7 @@ Digiland:
 
 # Digma
 Digma:
-  regex: 'Digma[_ ]([^;/]+) Build|HIT HT707[10]MG|CITI ATL 4G|CITI Octa 80|CITI 1902 3G|CITI Z530 3G|(CITI[_ ](?:[A-Z0-9]+)[_ ][34]G)[ _]C[ST](11[459]4MG|3001ML|500[67]PG|8209MG|8139ML|8152ML)|HIT 4G|HT7074ML|IDX5|(iDx10|iDx7)|MVM900H(?:WZ|C)|MVM908HCZ|(iDxD8 3G|iDxD10 3G|iDrQ10 3G|iDxD[45]|iDxQ5|iD[nx]D7(?:[_ ]3G)?)|PS604M|PT452E|Linx A400 3G LT4001PG|Linx C500 3G LT5001PG|Linx PS474S|LS504[01]PL|LT40(47|54)MG|LS405[01]MG|LS5053ML|LT5048MG|HT7071MG|LT5052ML|HT5035PG|HT4039PG|LT4049PG|NS6902QL|NS9797MG|TT1004PG|TT7025MG|((?:Optima|Platina|Plane)[ _](?:[EM])?(?:[0-9\.ST]+|Prime)(?:[ _][43]G)?)|(VOX[ _](?:[0-9\.A-Z]+)[_ ][43]G)'
+  regex: 'Digma[_ ]([^;/]+) Build|HIT HT707[10]MG|CITI ATL 4G|CITI Octa 80|CITI 1902 3G|CITI Z530 3G|(CITI[_ ](?:[A-Z0-9]+)[_ ][34]G)[ _]C[ST](11[459]4MG|3001ML|500[67]PG|8209MG|8139ML|8152ML|1050PL)|HIT 4G|HT7074ML|IDX5|(iDx10|iDx7)|MVM900H(?:WZ|C)|MVM908HCZ|(iDxD8 3G|iDxD10 3G|iDrQ10 3G|iDxD[45]|iDxQ5|iD[nx]D7(?:[_ ]3G)?)|PS604M|PT452E|Linx A400 3G LT4001PG|Linx C500 3G LT5001PG|Linx PS474S|LS504[01]PL|LT40(47|54)MG|LS405[01]MG|LS5053ML|LT5048MG|HT7071MG|LT5052ML|HT5035PG|HT4039PG|LT4049PG|NS6902QL|NS9797MG|TT1004PG|TT7025MG|((?:Optima|Platina|Plane)[ _](?:[EM])?(?:[0-9\.ST]+|Prime)(?:[ _][43]G)?)|(VOX[ _](?:[0-9\.A-Z]+)[_ ][43]G)'
   device: 'smartphone'
   models:
     - regex: 'HIT(?: 3G)? HT707[10]MG'
@@ -3839,7 +3854,7 @@ Digma:
     - regex: '(CITI_8527_4G|CITI Octa 80)'
       model: '$1'
       device: 'tablet'
-    - regex: '(CITI[ _](?:[A-Z0-9]+)[ _][34]G)[ _]C[ST](?:3001ML|500[67]PG|8209MG|11[459]4MG|3001ML|8152ML)'
+    - regex: '(CITI[ _](?:[A-Z0-9]+)[ _][34]G)[ _]C[ST](?:3001ML|500[67]PG|8209MG|11[459]4MG|3001ML|8152ML|1050PL)'
       model: '$1'
       device: 'tablet'
     - regex: 'iDxD8 3G'
@@ -9768,12 +9783,15 @@ Overmax:
 
 # Oysters
 Oysters:
-  regex: 'Oysters|T84ERI[ _]3G|T72HM(s_)?3G|(T74HMi|T84Bi)[_ ]4G|T74MR4G|T84Ni[_ ][34]G|Pacific[ ]?800i|T104B_4G'
+  regex: 'Oysters|T84ERI[ _]3G|T72HM(s_)?3G|(T74HMi|T84Bi)[_ ]4G|T74MR4G|T84Ni[_ ][34]G|Pacific[ ]?800i|T104B_4G|IndianV'
   device: 'tablet'
   models:
     - regex: 'Pacific[ ]?800i'
       device: 'smartphone'
       model: 'Pacific 800i'
+    - regex: 'IndianV'
+      device: 'smartphone'
+      model: 'Indian V'
     - regex: 'Oysters ((?:Arctic|Indian|Atlantic|Pacific)[^/;]+) Build'
       device: 'smartphone'
       model: '$1'
@@ -15847,7 +15865,7 @@ Takara:
 
 # Tronsmart
 Tronsmart:
-  regex: '(Orion R68G)[);/ ]'
+  regex: '(Orion R68G|Draco AW80|Draco H3)[);/ ]'
   device: 'tv'
   model: '$1'
 
