feat(device) detect new brand Senkatel models: T8002, T1009, T7011, T7012, T9702 feat(device) detect brand DNS model: SD01M
issue #6355

--- a/Tests/fixtures/smartphone-16.yml
+++ b/Tests/fixtures/smartphone-16.yml
@@ -5239,3 +5239,123 @@
     model: MOMO Mini 3GS
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 4.1.2; SD01M Build/JZO54K) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/71.0.3578.99 Mobile Safari/537.36 OPR/50.3.2426.136976
+  os:
+    name: Android
+    short_name: AND
+    version: 4.1.2
+    platform: ""
+  client:
+    type: browser
+    name: Opera Mobile
+    short_name: OM
+    version: 50.3.2426.136976
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: DN
+    model: SD01M
+  os_family: Android
+  browser_family: Opera
+-
+  user_agent: Mozilla/5.0 (Linux; Android 4.1.2; Senkatel_T8002 Build/JZO54K) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/67.0.3396.87 Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: 4.1.2
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    short_name: CH
+    version: 67.0.3396.87
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: "01"
+    model: T8002
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 4.2.2; Senkatel T7012 Build/JDQ39) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/42.0.2311.111 Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: 4.2.2
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    short_name: CH
+    version: 42.0.2311.111
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: "01"
+    model: T7012
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 4.2.2; Senkatel_T7011 Build/JDQ39) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/67.0.3396.87 Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: 4.2.2
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    short_name: CH
+    version: 67.0.3396.87
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: "01"
+    model: T7011
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 4.1.1; Senkatel_T1009 Build/JRO03C) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/69.0.3497.100 Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: 4.1.1
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    short_name: CH
+    version: 69.0.3497.100
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: "01"
+    model: T1009
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 4.1.1; Senkatel_T9702 Build/JRO03H) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/71.0.3578.99 Safari/537.36 OPR/50.3.2426.136976
+  os:
+    name: Android
+    short_name: AND
+    version: 4.1.1
+    platform: ""
+  client:
+    type: browser
+    name: Opera
+    short_name: OP
+    version: 50.3.2426.136976
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: "01"
+    model: T9702
+  os_family: Android
+  browser_family: Opera
