--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -3978,11 +3978,11 @@ Doro:
 
 # DNS
 DNS:
-  regex: '(?:DNS|AirTab)[ _\-]([^;/]+)Build|S4505M[);/ ]'
+  regex: '(?:DNS|AirTab)[ _\-]([^;/]+)Build|(?:S4505M|SD01M)[);/ ]'
   device: 'smartphone'
   models:
-    - regex: 'S4505M[);/ ]'
-      model: 'S4505M'
+    - regex: '(S4505M|SD01M)[);/ ]'
+      model: '$1'
     - regex: 'AirTab[ _\-]([^;/]+)Build'
       model: 'AirTab $1'
       device: 'tablet'
@@ -15916,3 +15916,8 @@ Eltex:
       model: 'NV-501-Wac'
     - regex: 'NV501[);/ ]'
       model: 'NV-501'
+
+Senkatel:
+  regex: 'Senkatel[ _](T1009|T8002|T701[12]|T9702)[);/ ]'
+  device: 'tablet'
+  model: '$1'
