feat(device) detect new brand Bobarry model: K10 SE feat(device) detect brand MicroMax model: 4560MMX feat(device) detect brand Brondi model: 501 SZ feat(device) detect brand Telefunken model: Foxtrot feat(device) detect brand Vivax model: Fun S500 feat(device) detect brand Yu models: Yureka Plus (YU5510A), Yutopia (YU5050) feat(device) detect brand Zidoo models: X6 Pro, X5
issue #6355

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -650,11 +650,13 @@ Apple:
 
 # micromax
 MicroMax:
-  regex: '(?:MicroMax[ \-\_]?[a-z0-9]+|Q327)|P70221 Build|YU(5040|5530)[);/ ]'
+  regex: '(?:MicroMax[ \-\_]?[a-z0-9]+|Q327)|4560MMX|P70221 Build|YU(?:5040|5530)[);/ ]'
   device: 'smartphone'
   models:
     - regex: 'AQ5001'
       model: 'Canvas Juice 2'
+    - regex: '4560MMX[);/ ]'
+      model: '4560MMX'
     - regex: 'E481'
       model: 'Canvas 5'
     - regex: 'P70221 Build'
@@ -2362,10 +2364,10 @@ Boway:
 
 # Brondi
 Brondi:
-  regex: 'Brondi[ _]|(?:CENTURION|GLADIATOR| GLORY|LUXURY|SENSUELLE|VICTORY)(?:[ _-]?[2-6])?[);/ ]|Surfing Tab'
+  regex: 'Brondi[ _]|(?:CENTURION|GLADIATOR| GLORY|LUXURY|SENSUELLE|VICTORY)(?:[ _-]?[2-6])?[);/ ]|Surfing Tab|501 SZ'
   device: 'smartphone'
   models:
-    - regex: 'Brondi[ _](620 SZ|730_4G_HD)[);/ ]'
+    - regex: '(?:Brondi[ _])?(620 SZ|730_4G_HD|501 SZ)[);/ ]'
       model: '$1'
     - regex: 'CENTURION(?:[ _-]?([2-6]))?[);/ ]'
       model: 'CENTURION $1'
@@ -12336,12 +12338,12 @@ teXet:
 
 # Telefunken
 Telefunken:
-  regex: 'TELEFUNKEN|TEL-1013GIQA|TF-SP5001|(TF-MID(?:[78]02G|9705RG|7805G|1010G))|(TF-LED(?:65S75T2SU|32S39T2S|32S5[289]T2S|32S70T2S))'
+  regex: 'TELEFUNKEN|Foxtrot|TEL-1013GIQA|TF-SP5001|(TF-MID(?:[78]02G|9705RG|7805G|1010G))|(TF-LED(?:65S75T2SU|32S39T2S|32S5[289]T2S|32S70T2S))'
   device: 'tablet'
   models:
     - regex: 'TEL-1013GIQA'
       model: 'Giqa 10.1 3G'
-    - regex: '(?:TELEFUNKEN)?(TF-SP5001|Outdoor LTE)'
+    - regex: '(?:TELEFUNKEN)?(TF-SP5001|Outdoor LTE|Foxtrot)'
       model: '$1'
       device: 'smartphone'
     - regex: '(TF-MID(?:[78]02G|9705RG|7805G|1010G))'
@@ -13654,14 +13656,16 @@ Yezz:
 
 # Yu
 Yu:
-  regex: '(?:YU5[05]10[A]?|YU4711|AO5510)[);/ ]'
+  regex: '(?:YU5[05]10[A]?|YU4711|AO5510|YU5050)[);/ ]'
   device: 'smartphone'
   models:
     - regex: 'YU5010[A]?[);/ ]'
       model: 'Yuphoria'
+    - regex: 'YU5050[);/ ]'
+      model: 'Yutopia'
     - regex: 'AO5510[);/ ]'
       model: 'Yureka'
-    - regex: 'YU5510[);/ ]'
+    - regex: 'YU5510[A]?[);/ ]'
       model: 'Yureka Plus'
     - regex: 'YU4711[);/ ]'
       model: 'Yunique'
@@ -13834,16 +13838,18 @@ Toshiba:
 
 # Vivax
 Vivax:
-  regex: 'VIVAX|(Fly5[_ ]Lite)[;)/ ]'
+  regex: 'VIVAX|(?:Fly5[_ ]Lite|Fun[_ ]S500)[;)/ ]'
   device: 'smartphone'
   models:
-    - regex: 'Fly5[_ ]Lite'
+    - regex: 'Fly5[_ ]Lite[;)/ ]'
       model: 'Fly 5 Lite'
-    - regex: 'VIVAX[ _]Fly3'
+    - regex: 'Fun[_ ]S500[;)/ ]'
+      model: 'Fun S500'
+    - regex: 'VIVAX[ _]Fly3[;)/ ]'
       model: 'Fly 3'
-    - regex: 'VIVAX (Point X551)'
+    - regex: 'VIVAX (Point X551)[;)/ ]'
       model: '$1'
-    - regex: 'SMART Point X5010'
+    - regex: 'SMART Point X5010[;)/ ]'
       model: 'Smart Point X5010'
 
 # MLS
@@ -15326,7 +15332,7 @@ Soyes:
 
 # Zidoo
 Zidoo:
-  regex: 'ZIDOO[ _](H6 Pro|X9S|Z10)[);/ ]'
+  regex: 'ZIDOO[ _](H6 Pro|X6 Pro|X9S|Z10|X5)[);/ ]'
   device: 'tv'
   model: '$1'
 
@@ -15932,7 +15938,14 @@ Eltex:
     - regex: 'NV501[);/ ]'
       model: 'NV-501'
 
+# Senkatel
 Senkatel:
   regex: 'Senkatel[ _](T1009|T8002|T701[12]|T9702)[);/ ]'
   device: 'tablet'
   model: '$1'
+
+# Bobarry
+Bobarry:
+  regex: '(?:K10[ ]?SE)[);/ ]'
+  device: 'tablet'
+  model: 'K10 SE'
