--- a/Tests/fixtures/smartphone-16.yml
+++ b/Tests/fixtures/smartphone-16.yml
@@ -5559,3 +5559,203 @@
     model: Y8 Max
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 5.1; Fun_S500) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/76.0.3809.132 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: "5.1"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    short_name: CM
+    version: 76.0.3809.132
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: V5
+    model: Fun S500
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 5.1; Foxtrot) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/79.0.3945.136 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: "5.1"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    short_name: CM
+    version: 79.0.3945.136
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: TL
+    model: Foxtrot
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 5.1; 4560MMX) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/74.0.3729.157 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: "5.1"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    short_name: CM
+    version: 74.0.3729.157
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: MI
+    model: 4560MMX
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 5.1; 501 SZ Build/LMY47D; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/76.0.3809.89 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: "5.1"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Webview
+    short_name: CV
+    version: 76.0.3809.89
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: BR
+    model: 501 SZ
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 5.1.1; ZIDOO_X5) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/77.0.3865.116 Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: 5.1.1
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    short_name: CH
+    version: 77.0.3865.116
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: ZI
+    model: X5
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 5.1.1; ZIDOO_X6 Pro) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/76.0.3809.89 Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: 5.1.1
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    short_name: CH
+    version: 76.0.3809.89
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: ZI
+    model: X6 Pro
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 5.1.1; YU5050) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/78.0.3904.62 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: 5.1.1
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    short_name: CM
+    version: 78.0.3904.62
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Y1
+    model: Yutopia
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 5.1.1; YU5510A Build/HDYU5510A) AppleWebKit/537.36 (KHTML. like Gecko) Version/4.0 Chrome/39.0.0.0 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: 5.1.1
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Webview
+    short_name: CV
+    version: 39.0.0.0
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Y1
+    model: Yureka Plus
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 5.12; K10SE Build/LMY47I; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/77.0.3865.116 Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: "5.12"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Webview
+    short_name: CV
+    version: 77.0.3865.116
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: B9
+    model: K10 SE
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 5.12; K10 SE) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/78.0.3904.108 Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: "5.12"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    short_name: CH
+    version: 78.0.3904.108
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: B9
+    model: K10 SE
+  os_family: Android
+  browser_family: Chrome
