feat(device) detect new brand Wortmann model: Terra Pad 1004 feat(device) detect new brand BB mobile models: Techno 8.0" Poplar LTE TQ863Q, Techno Spark 3G X595BT, Techno 7.0" Mozg LTE I700AJ, Techno 7.0" Kalash LTE TQ763I feat(device) detect brand Mpman models: MPQC730, MPQC1030, MPQC30i issue #6355

--- a/Tests/fixtures/smartphone-14.yml
+++ b/Tests/fixtures/smartphone-14.yml
@@ -7069,7 +7069,7 @@
   device:
     type: smartphone
     brand: WI
-    model: Cink PEAX 2
+    model: Cink Peax 2
   os_family: Android
   browser_family: Android Browser
 - 
