--- a/Tests/fixtures/smartphone-16.yml
+++ b/Tests/fixtures/smartphone-16.yml
@@ -5999,3 +5999,163 @@
     model: T74MAi 3G
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 5.1.1; MPQC730) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/79.0.3945.93 Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: 5.1.1
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    short_name: CH
+    version: 79.0.3945.93
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: MM
+    model: MPQC730
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 5.1.1; MPQC1030) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/77.0.3865.92 Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: 5.1.1
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    short_name: CH
+    version: 77.0.3865.92
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: MM
+    model: MPQC1030
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 5.1.1; MPQC30i) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/76.0.3809.111 Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: 5.1.1
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    short_name: CH
+    version: 76.0.3809.111
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: MM
+    model: MPQC30i
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 5.1; TERRA PAD 1004) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/79.0.3945.79 Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: "5.1"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    short_name: CH
+    version: 79.0.3945.79
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: WR
+    model: Terra Pad 1004
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 5.1; Techno_TQ863Q) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/76.0.3809.132 Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: "5.1"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    short_name: CH
+    version: 76.0.3809.132
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: 0B
+    model: Techno 8.0" Poplar LTE TQ863Q
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 5.1; Techno X595BT) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/79.0.3945.93 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: "5.1"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    short_name: CM
+    version: 79.0.3945.93
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: 0B
+    model: Techno Spark 3G X595BT
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 5.1; Techno I700AJ Build/I700AJ) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/39.0.0.0 Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: "5.1"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Webview
+    short_name: CV
+    version: 39.0.0.0
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: 0B
+    model: Techno 7.0" Mozg LTE I700AJ
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 5.1; Techno 7.0 LTE TQ763I) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/78.0.3904.90 Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: "5.1"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    short_name: CH
+    version: 78.0.3904.90
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: 0B
+    model: Techno 7.0" Kalash LTE TQ763I
+  os_family: Android
+  browser_family: Chrome
