--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -7993,7 +7993,7 @@ Lingwin:
 
 # Logicom
 Logicom:
-  regex: '(TAB950|TAB1062|E731|E812|E912|E1031|POWER BOT|La Tab 72|(?:B|C|M|ID|VR)[ _]?BOT[ _]?(?:TAB[ _])?([0-9]+\+?)(?:PLUS)?|KT712A_4\.4|L-?IXIR[0-9]*|L-ITE|L-?EMENT|Le[ _](?:Hop|Lift|Hola|LeMoov[2]?|Fit FR|Smooth(?: FR)?))[_);/ ]'
+  regex: '(TAB950|TAB1062|E731|E812|E912|E1031|POWER BOT|La Tab 72|(?:B|C|M|ID|VR)[ _]?BOT[ _]?(?:TAB[ _])?([0-9]+\+?)(?:PLUS)?|KT712A_4\.4|L-?IXIR[0-9]*|L-ITE|L-?EMENT|Le[ _]?(?:Hop|Lift|Hola|Moov[2]?|Fit FR|Smooth(?: FR)?))[_);/ ]'
   device: 'tablet'
   models:
     - regex: 'La Tab 72'
@@ -8019,6 +8019,7 @@ Logicom:
       device: 'smartphone'
     - regex: 'Le Hola FR[);/ ]'
       model: 'Le Hola FR'
+      device: 'smartphone'
     - regex: 'Le[ _]Hola[);/ ]'
       model: 'Le Hola'
       device: 'smartphone'
